--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
 name: CI
 on:
   pull_request:
-    branches: [master]
+    branches: main
   push:
-    branches: [master]
+    branches: main
+
 jobs:
   build:
     runs-on: ubuntu-latest
